--- a/dnb.html
+++ b/dnb.html
@@ -118,7 +118,7 @@ Note: A Sass implementation can make this easier. Please look into that if you c
                         </ul>
                     </div>
                     
-                    <div class='col-xs-1 ad pull-right'><a href='newpost.php'><button type="button" class="btn btn-success">Post an Ad</button></a></div>
+                    <div class='col-xs-1 ad pull-right'><a href='newpost.php'><button type="button" class="btn">Post an Ad</button></a></div>
                     <ul class='col-xs-6'>
                         
                         <li class='hidden-xs col-sm-3 col-md-3 col-lg-2'>
